a2a/2.0/modules/ROOT/pages/a2a-connector-acb.adoc
= Using Anypoint Code Builder to Configure {connector-name} Connector {version}
:exchange-search-name: a2a
:connector-name: A2A
:version: 2.0
:lc-connector-name: a2a
:studio-connector-name: A2A


include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-connector-config-intro"]

== Create a New Integration Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-create-integration-project"]

== Add the Connector to Your Integration Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-add-connector-to-project"]

== Configure the Source For the Flow

A source (trigger) starts the flow when specified conditions are met. You can configure these sources for {connector-name} Connector:

* *A2A Server - Task Authorizer Listener*
+
A2A Server authorization listener that gates auth-required operations before they execute. It runs for both the JSON-RPC and HTTP+JSON transport bindings. If the flow completes successfully, the request is authorized. If the flow raises an error, the request is denied and an `A2A:UNAUTHORIZED` error is returned to the caller. The current operation name is available on `attributes.operationName` so a single listener can gate multiple operations. This source supersedes the *A2A Server - Authorization Listener* from earlier versions.

* *A2A Server - Task Listener*
+
Listens for and receives incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks. This unified source serves blocking, non-blocking, and streaming `SendMessage` requests over both transport bindings; there is no separate stream listener.
+
* *A2A Server - On Async Request Listener*
+
Server-side listener that customizes the initial `Task` returned for streaming (`SendStreamingMessage`) and non-blocking (`SendMessage` with `returnImmediately=true`) requests. Use this source in conjunction with *A2A Server - Task Listener*.
+
* *A2A Server - On Push Notification Set Listener*
+
Validates the push notification configuration before routing the request to the *A2A Server - Task Listener* source.

For example, to configure an *A2A Server - Task Listener* source, follow these steps:

. Click the *A2A Server - Task Listener* component on the canvas.
. (Optional) Click the edit icon to change the name of the *A2A Server - Task Listener* component.
. In the *General* tab, configure the connection for the A2A Server. See xref:a2a-connector-reference.adoc#Server[A2A Server Configuration].
. Select the *Advanced* tab to configure these attributes:
+
[%header%autowidth.spread]
|===
| Attribute | Description | Required
| Primary node only | Select this option to execute the *A2A Server - Task Listener* source on the primary node only when running in a cluster. | No
| Redelivery policy | Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow. | No
| Reconnection strategy | Retry strategy in case of connectivity errors. When an operation in a Mule application fails to connect to an external server, the default behavior is for the operation to fail immediately and return a connectivity error. You can modify the default behavior by configuring the reconnection strategy for the operation. | No
|===

== Add Components to Your Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-add-components-to-project"]

== Configure the Component Attributes

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-configure-attributes"]

== Create a New Configuration XML File

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-create-config-file-acb"]

[[debug]]
== Debug the App

Debug your Mule application using the embedded debugger in Anypoint Code Builder.

See xref:anypoint-code-builder::int-debug-mule-apps.adoc[].

== See Also

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-template-see-also"]
* xref:runtime-manager::deployment-strategies.adoc[]
